# lab08

./: CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  DESCRIPTION_SOLVER  Dockerfile  test.cpp
.github/workflows/: docker-ci.yml  release.yml
_builds/: CMakeCache.txt
_builds/_3rdParty/Hunter/: install-root-dir
_builds/_3rdParty/Hunter/toolchain/: toolchain.info  toolchain.info.NOLF
_builds/clang-cxx14/_3rdParty/Hunter/: install-root-dir
_builds/clang-cxx14/_3rdParty/Hunter/toolchain/: toolchain.info  toolchain.info.NOLF
_builds/clang-cxx14/_3rdParty/Hunter/toolchain/_builds/: CMakeCache.txt  Makefile  cmake_install.cmake
_logs/polly/clang-cxx14/: log-0.txt  log-1.txt  log-2.txt  log.txt
_logs/polly/default/: log-0.txt  log-2.txt  log.txt
demo/: main.cpp
